docker-demo/springboot-hi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-docker-demo
  namespace: devops
  labels:
    app: springboot
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
        version: "1.0"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: springboot-docker-demo
          image: qxr777/docker-demo:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 60
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
