docker-demo/springboot-hi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-hi-service
  namespace: devops
  labels:
    app: springboot
    version: "1.0"
spec:
#  type: NodePort
  ports:
    - port: 8080
#      nodePort: 30080
      protocol: TCP
#      targetPort: 8080
  selector:
    app: springboot
    version: "1.0"
