docker-demo/springboot-hi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-hi-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /waiter-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-hi-service
                port:
                  number: 8080
